syntax = "proto3";
package daemon;

message ConnectRequest {
    required string identity = 1;
    required bytes public_key = 2;
    required bytes signature = 3;
    required bool encrypted = 4;
}

message ConnectResponse {
    enum Result {
        ACCEPTED = 0;
        REJECTED = 1;
    }
    required Result response = 1;
}

message EncryptedData {
    required bytes nonce = 1;
    required bytes payload = 2;
}

message InnerMessage {
    enum Type {
        OPEN = 0;
        CLOSE = 1;
        DATA = 10;
    }
    required Type type = 1;
    required string id = 2;
    optional bytes data = 3;
}

message OuterMessage {
    enum Type {
        ALIVE = 0;
        DATA = 10;
        BYE = 20;
        CONNECT_REQUEST = 30;
        CONNECT_RESPONSE = 31;
    }
    required Type type = 1;
    optional bytes message = 2;
    optional EncryptedData encrypted_message = 3;
    optional ConnectRequest connect_request = 100;
    optional ConnectResponse connect_response = 110;
}
